// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupField should render correctly checked 1`] = `
<DocumentFragment>
  .css-1civgmb {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-7o2an9 {
  border: none;
  padding: 0;
  margin: 0;
}

.css-tjrecv {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1megpuc {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1t7ypwa {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-16r4i0r {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.css-16r4i0r:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.css-16r4i0r[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.css-1ywhivs {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-okwmur {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.css-1gs9f7m {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.css-1gs9f7m:hover {
  background-color: #d9dadd;
}

.css-1gs9f7m:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.css-1gs9f7m:focus-within,
.css-1gs9f7m:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-1gs9f7m[data-disabled='false']:active:after {
  width: 22.04px;
}

.css-1gs9f7m[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.css-1gs9f7m[data-checked='true']:hover {
  background-color: #792dd4;
}

.css-1gs9f7m[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.css-1gs9f7m[data-checked='true']:focus-within,
.css-1gs9f7m[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-1gs9f7m[data-disabled='true'] {
  background: #f3f3f4;
}

.css-1gs9f7m[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.css-p9zju0 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.css-p9zju0[disabled] {
  cursor: not-allowed;
}

<form>
    <div
      class="css-1civgmb ehpbis70"
    >
      <fieldset
        class="css-7o2an9 e1qvneex1"
      >
        <div
          class="css-tjrecv ehpbis70"
        >
          <legend
            class="css-1megpuc e13y3mga0"
          >
            Label 
          </legend>
          <div
            class="css-1t7ypwa ehpbis70"
          >
            <label
              aria-disabled="false"
              class="css-16r4i0r e1wstm610"
            >
              <div
                class="css-1ywhivs ehpbis70"
              >
                <div
                  class="css-okwmur e3f5lzv0"
                >
                  value 1
                </div>
              </div>
              <div
                class="css-1gs9f7m e1wstm612"
                data-checked="false"
                data-disabled="false"
              >
                <input
                  aria-checked="false"
                  class="css-p9zju0 e1wstm611"
                  id=":r1:"
                  name="Group.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="css-16r4i0r e1wstm610"
            >
              <div
                class="css-1ywhivs ehpbis70"
              >
                <div
                  class="css-okwmur e3f5lzv0"
                >
                  value 1
                </div>
              </div>
              <div
                class="css-1gs9f7m e1wstm612"
                data-checked="true"
                data-disabled="false"
              >
                <input
                  aria-checked="true"
                  class="css-p9zju0 e1wstm611"
                  id=":r3:"
                  name="Group.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
    </div>
  </form>
</DocumentFragment>
`;

exports[`GroupField should trigger events correctly with required prop 1`] = `
<DocumentFragment>
  .css-1civgmb {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-7o2an9 {
  border: none;
  padding: 0;
  margin: 0;
}

.css-tjrecv {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1megpuc {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-7rgg33-sizeStyles {
  vertical-align: middle;
  fill: #b3144d;
  height: 8px;
  width: 8px;
  min-width: 8px;
  min-height: 8px;
  vertical-align: super;
}

.css-7rgg33-sizeStyles .fillStroke {
  stroke: #b3144d;
  fill: none;
}

.css-1t7ypwa {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-16r4i0r {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.css-16r4i0r:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.css-16r4i0r[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.css-1ywhivs {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-okwmur {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.css-1gs9f7m {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.css-1gs9f7m:hover {
  background-color: #d9dadd;
}

.css-1gs9f7m:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.css-1gs9f7m:focus-within,
.css-1gs9f7m:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-1gs9f7m[data-disabled='false']:active:after {
  width: 22.04px;
}

.css-1gs9f7m[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.css-1gs9f7m[data-checked='true']:hover {
  background-color: #792dd4;
}

.css-1gs9f7m[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.css-1gs9f7m[data-checked='true']:focus-within,
.css-1gs9f7m[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-1gs9f7m[data-disabled='true'] {
  background: #f3f3f4;
}

.css-1gs9f7m[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.css-p9zju0 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.css-p9zju0[disabled] {
  cursor: not-allowed;
}

<form>
    <div
      class="css-1civgmb ehpbis70"
    >
      <fieldset
        class="css-7o2an9 e1qvneex1"
      >
        <div
          class="css-tjrecv ehpbis70"
        >
          <legend
            class="css-1megpuc e13y3mga0"
          >
            ToggleGroupField events 
            <svg
              class="e1qvneex0 css-7rgg33-sizeStyles e1gt4cfo0"
              viewBox=" 0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 2h4l-.79 7.91 6.45-4.64 2 3.46L14.42 12l7.24 3.27-2 3.46-6.45-4.64L14 22h-4l.79-7.91-6.45 4.64-2-3.46L9.58 12 2.34 8.73l2-3.46 6.45 4.64z"
              />
            </svg>
          </legend>
          <div
            class="css-1t7ypwa ehpbis70"
          >
            <label
              aria-disabled="false"
              class="css-16r4i0r e1wstm610"
            >
              <div
                class="css-1ywhivs ehpbis70"
              >
                <div
                  class="css-okwmur e3f5lzv0"
                >
                  value 1
                </div>
              </div>
              <div
                class="css-1gs9f7m e1wstm612"
                data-checked="false"
                data-disabled="false"
              >
                <input
                  aria-checked="false"
                  class="css-p9zju0 e1wstm611"
                  id=":r6:"
                  name="test.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="css-16r4i0r e1wstm610"
            >
              <div
                class="css-1ywhivs ehpbis70"
              >
                <div
                  class="css-okwmur e3f5lzv0"
                >
                  value 1
                </div>
              </div>
              <div
                class="css-1gs9f7m e1wstm612"
                data-checked="false"
                data-disabled="false"
              >
                <input
                  aria-checked="false"
                  class="css-p9zju0 e1wstm611"
                  id=":r8:"
                  name="test.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
    </div>
  </form>
</DocumentFragment>
`;
